--- a/site/index.html
+++ b/site/index.html
@@ -6,12 +6,11 @@
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-
-<body> <!-- Should only contain one each of <header>, <main>, and <footer> -->
-
-<header> <!-- Should only contain one each of <hgroup> and <nav> -->
+<body>
+<header>
 <hgroup>
-<h1>Len’s Stuff</h1>
+    <h1>Len’s Stuff</h1>
+    <p>It's gonna be the future soon</p>
 </hgroup>
 <nav>
 <ul>
@@ -24,10 +23,47 @@
 
 <main>
 <h1><a name="projects"></a>Projects</h1>
+<h2>Recent</h2>
+<dl>
+    <dt><a href="synth/">Synth</a></dt>
+    <dd>Designs for Eurorack synthesizer modules</dd>
+    <dt><a href="https://github.com/Len42/OpAmpTester">Op Amp Tester</a></dt>
+    <dd>Tests op amp chips to verify that they are working</dd>
+</dl>
+
+<h2>Utilities</h2>
+<dl>
+    <dt><a href="https://github.com/Len42/asentry">asentry</a></dt>
+    <dd>Monitor the JPL Sentry database for asteroid impact threats. Just in case, you know?</dd>
+    <dt><a href="https://github.com/Len42/NetToBOM">NetToBOM</a></dt>
+    <dd>This is my KiCad BOM plug-in. There are many like it but this one is mine.</dd>
+    <dt><a href="https://github.com/Len42/MakeVersionInfo">MakeVersionInfo</a></dt>
+    <dd>Microsoft Visual Studio utility to automatically update a project's version number</dd>
+</dl>
+
+<h2>Archived Projects</h2>
+<dl>
+    <dt><a href="projects/davybot/">DaveyBot</a></dt>
+    <dd>A computer that plays <cite>Guitar Hero</cite> and <cite>Rock Band</cite></dd>
+    <dt><a href="projects/toybot/">ToyBot</a></dt>
+    <dd>A toy car that drives around by itself</dd>
+</dl>
 
 <h1><a name="programming"></a>Programming</h1>
+<dl>
+    <dt><a href="dev/rp2040-dev-setup.html">RP2040 Windows Development Setup</a></dt>
+    <dd>How to set up a C/C++ development environment for the Raspberry Pi Pico and other
+        RP2040 dev boards on Windows</dd>
+    <dt><a href="rp2040-adc-accuracy.html">RP2040 ADC Accuracy</a></dt>
+    <dd>Getting the most out of an analog-to-digital converter</dd>
+</dl>
 
 <h1><a name="misc"></a>Misc</h1>
+<dl>
+    <dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
+    <dd>World-building for an RPG campaign based on
+        <a href="https://www.imdb.com/title/tt0069638/"><cite>The Starlost</cite></a></dd>
+</dl>
 </main>
 
 <footer>
