add GitHub links to home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div><dt><a href="dev/rp2040-adc-accuracy.html">RP2040 ADC Accuracy</a></dt>
     <dd>Getting the most out of an analog-to-digital converter</dd></div>
     <div><dt><a href="https://github.com/Len42/">GitHub</a></dt>
-        <dd>My GitHub <a href="https://github.com/Len42/">repos</a> and <a href="https://gist.github.com/Len42">gists</a></dd></div>
+        <dd>My GitHub <a href="https://github.com/Len42/">repositories</a> and <a href="https://gist.github.com/Len42">gists</a></dd></div>
 </dl>
 
 <h1><a name="misc"></a>Other Stuff</h1>
