LED clock project - wip

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <dd>A computer that plays <cite>Guitar Hero</cite> and <cite>Rock Band</cite></dd></div>
     <div><dt><a href="projects/toybot/">ToyBot</a></dt>
     <dd>A toy car that drives around by itself</dd></div>
+    <div><dt><a href="projects/ledclock/">LED Clock</a></dt>
+        <dd>A retro LED clock made with recycled parts</dd></div>
 </dl>
 
 <h1><a name="programming"></a>Programming</h1>
