LED clock project - done

--- a/projects/ledclock/index.html
+++ b/projects/ledclock/index.html
@@ -35,10 +35,8 @@ printed on transparent decals.</p>
 <p>The firmware is also partly from the Ice Tube, partly written by me.
 <a href="http://forums.adafruit.com/viewtopic.php?f=41&t=12948">Mike's Arduino version of the Ice Tube firmware</a>
 also came in handy for prototyping.
-Since the display has only four digits, this clock doesn't have fancy text menus like the Ice Tube.</p>
-
-    TODO: GitHub
-    <p><a href="/download/LEDClock.2010.01.03.zip">Download firmware</a></p>
+Since the display has only four digits, this clock doesn't have fancy text menus like the Ice Tube.
+<a href="https://github.com/Len42/LEDClock">Source code is available on GitHub.</a></p>
     
 </main>
 
