--- a/dev/rp2040-dev-setup.html
+++ b/dev/rp2040-dev-setup.html
@@ -127,13 +127,13 @@ git clone -b master https://github.com/raspberrypi/pico-examples.git
 
 <p>Find the file <kbd>blink.uf2</kbd> in the <kbd>pico-examples\build\blink</kbd> directory.</p>
 
-<p>Connect the Pi Pico (or other RP2040 dev board) to the PC while pressing the Pico's <kbd>BOOTSEL</kbd> button.</p>
+<p>Connect the Pi Pico (or other RP2040 dev board) to the PC while pressing the Pico’s <kbd>BOOTSEL</kbd> button.</p>
 
 <p>Open the Pi Pico device in Windows Explorer.</p>
 
-<p>Drag <kbd>blink.uf2</kbd> to the Pico's storage.</p>
+<p>Drag <kbd>blink.uf2</kbd> to the Pico’s storage.</p>
 
-<p>The Pico's LED should start blinking.</p>
+<p>The Pico’s LED should start blinking.</p>
 
 <h2>Visual Studio Code</h2>
 <p>Go to the VS Code download page: <a href="https://code.visualstudio.com/Download">https://code.visualstudio.com/Download</a>.</p>
