--- a/projects/ledclock/index.html
+++ b/projects/ledclock/index.html
@@ -26,16 +26,16 @@
 
 <p><a href="http://www.flickr.com/photos/lenp17/sets/72157622892723070/">Click here for more pics.</a></p>
 
-<p>The LED display is salvaged from an old clock-radio. The enclosure (which isn't fully enclosed)
+<p>The LED display is salvaged from an old clock-radio. The enclosure (which isn’t fully enclosed)
 is made from old cassette tape cases and decorated with album art (about as old as the LED)
 printed on transparent decals.</p>
     
-<p>The electronics are loosely based on <a href="https://www.adafruit.com/product/194">Adafruit's Ice Tube clock</a>. I used a <a href="https://www.adafruit.com/product/72">BoArduino</a> module which has a microcontroller and a power supply on a small board. I replaced the BoArduino's 16 MHz oscillator with a watch crystal and set the microcontrollerto run on its internal clock. I found an old-school driver chip for the non-multiplexed LED display (<a href="https://www.microchip.com/en-us/product/mm5451">Micrel/Microchip MM5451</a>). There's a photocell for automatic brightness control.</p>
+<p>The electronics are loosely based on <a href="https://www.adafruit.com/product/194">Adafruit’s Ice Tube clock</a>. I used a <a href="https://www.adafruit.com/product/72">BoArduino</a> module which has a microcontroller and a power supply on a small board. I replaced the BoArduino’s 16 MHz oscillator with a watch crystal and set the microcontrollerto run on its internal clock. I found an old-school driver chip for the non-multiplexed LED display (<a href="https://www.microchip.com/en-us/product/mm5451">Micrel/Microchip MM5451</a>). There’s a photocell for automatic brightness control.</p>
 
 <p>The firmware is also partly from the Ice Tube, partly written by me.
-<a href="http://forums.adafruit.com/viewtopic.php?f=41&t=12948">Mike's Arduino version of the Ice Tube firmware</a>
+<a href="http://forums.adafruit.com/viewtopic.php?f=41&t=12948">Mike’s Arduino version of the Ice Tube firmware</a>
 also came in handy for prototyping.
-Since the display has only four digits, this clock doesn't have fancy text menus like the Ice Tube.
+Since the display has only four digits, this clock doesn’t have fancy text menus like the Ice Tube.
 <a href="https://github.com/Len42/LEDClock">Source code is available on GitHub.</a></p>
     
 </main>
