--- a/synth/dexy/firmware.html
+++ b/synth/dexy/firmware.html
@@ -66,7 +66,7 @@
 single voice is implemented. There are 6 operators, each consisting of a sine wave
 oscillator and an envelope generator. The operators are combined according to one of
 32 “algorithms” so that some operators are audio outputs and some operators modulate
-another operator's frequency.</p>
+another operator’s frequency.</p>
 
 <p>Sine waves and envelopes are generated using wavetables.</p>
 
