--- a/synth/dexy/index.html
+++ b/synth/dexy/index.html
@@ -38,7 +38,7 @@ Hardware and software are open source. GitHub repository is <a href="https://git
 
 <h1><a name="features"></a>Features</h1>
 <ul>
-<li>Single FM voice loosely based on the <a href="https://www.vintagesynth.com/yamaha/dx7">Yamaha DX7's</a> 6-operator voice architecture</li>
+<li>Single FM voice loosely based on the <a href="https://www.vintagesynth.com/yamaha/dx7">Yamaha DX7’s</a> 6-operator voice architecture</li>
 <li>Inputs:
     <ul>
     <li>Gate</li>
