--- a/synth/firmware-programming.html
+++ b/synth/firmware-programming.html
@@ -48,7 +48,7 @@ use an <a href="https://www.microchip.com/en-us/product/atmega328p">ATmega328P</
 <p>To program the module’s firmware:</p>
 <ol>
 <li><strong>Important:</strong> Make sure the module is <strong>not</strong> powered. Either turn off the Eurorack system’s power or unplug the Eurorack power cable from the module.</li>
-<li>Connect the module to the computer using the FTDI USB-serial cable. The header connector on the cable connects to the 6-pin header on the module. <strong>Make sure</strong> it's connected the right way around. The black wire is ground.</li>
+<li>Connect the module to the computer using the FTDI USB-serial cable. The header connector on the cable connects to the 6-pin header on the module. <strong>Make sure</strong> it’s connected the right way around. The black wire is ground.</li>
 <li>On the computer, run the Arduino IDE software and load the appropriate sketch (<kbd>.ino</kbd> file) for the module.</li>
 <li>In the <kbd>Tools</kbd> menu, select these settings:
     <ul>
