--- a/synth/index.html
+++ b/synth/index.html
@@ -28,8 +28,8 @@
 <p>My <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> modular synthesizer designs are shared in
 <a href="https://github.com/Len42/Synth/#readme-ov-file">this GitHub repository</a>.</p>
 <p>Please note that I am a hobbyist, not a trained electronics engineer!
-These designs are not perfect. The modules work for me, but I can't promise
-they'll work for everyone who builds them.</p>
+These designs are not perfect. The modules work for me, but I can’t promise
+they’ll work for everyone who builds them.</p>
 <p>These designs are shared as open source. See the license details in each
 project and source file.</p>
 <p>&mdash; Len</p>
