--- a/synth/panels.html
+++ b/synth/panels.html
@@ -21,7 +21,7 @@
 
 <main>
 <p>Some of my modules were made with a
-<a href="https://delptronics.com/module-construction-set.php">Delptronics Module Construction Set</a>
+<a href="https://delptronics.com/module-construction-set.php">Delptronics Module Construction Set</a>.
 This includes an alumin(i)um front panel with a drilling template printed on it.</p>
 
 <p></p>Other modules use PCBs that I designed, so the front panel is a PCB with holes.</p>
@@ -29,7 +29,7 @@ This includes an alumin(i)um front panel with a drilling template printed on it.
 <p>The graphics are designed in <a href="https://inkscape.org/">Inkscape</a>,
 laser printed on adhesive-backed paper, and covered with a clear adhesive
 lamination sheet. That does make the panels very shiny, which could cause
-annoying glare depending on the lighting. It's not a problem in my setup.</p>
+annoying glare depending on the lighting. It’s not a problem in my setup.</p>
 
 <p>For filler panels, I use <a href="https://www.amazon.ca/gp/product/B0013L5PX2/">chipboard</a>
 with graphics printed as above.</p>
