cleaner handling of <dl> formatting

--- a/index.html
+++ b/index.html
@@ -29,56 +29,57 @@
 <p>I have published many of my software and hardware projects on <a href="https://github.com/Len42">GitHub</a>.</p>
 
 <h2>Recent</h2>
-<dl>
-    <div><dt><a href="synth/">Modular Synth</a></dt>
-    <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd></div>
-    <div><dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
-    <dd>Tests op amp chips to verify that they are working</dd></div>
+<dl class="inline">
+    <dt><a href="synth/">Modular Synth</a></dt>
+    <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd>
+    <dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
+    <dd>Tests op amp chips to verify that they are working</dd>
 </dl>
 
 <h2>Utilities</h2>
-<dl>
-    <div><dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a></dt>
-    <dd>Monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd></div>
-    <div><dt><a href="https://github.com/Len42/NetToBOM/#readme-ov-file">NetToBOM</a></dt>
-    <dd>This is my <a href="https://www.kicad.org/">KiCad</a> BOM plug-in. There are many like it but this one is mine.</dd></div>
-    <div><dt>MakeVersionInfo</dt>
-    <dd><a href="https://visualstudio.microsoft.com/">Microsoft Visual Studio</a> utility to automatically update a project’s version number</dd>
+<dl class="inline">
+    <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a></dt>
+    <dd>Monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
+    <dt><a href="https://github.com/Len42/NetToBOM/#readme-ov-file">NetToBOM</a></dt>
+    <dd>This is my <a href="https://www.kicad.org/">KiCad</a> BOM plug-in. There are many like it but this one is mine.</dd>
+    <dt>MakeVersionInfo</dt>
+    <dd><a href="https://visualstudio.microsoft.com/">Microsoft Visual Studio</a> utility to automatically update a project’s version number
     <ul>
         <li><a href="https://github.com/Len42/MakeVersionInfoP/#readme-ov-file">Python implementation</a></li>
         <li><a href="https://github.com/Len42/MakeVersionInfo/#readme-ov-file">PowerShell implementation</a></li>
-    </ul></div>
+    </ul>
+    </dd>
 </dl>
 
 <h2>Archived Projects</h2>
-<dl>
-    <div><dt><a href="projects/daveybot/">DaveyBot</a></dt>
-    <dd>A computer that plays <cite>Guitar Hero</cite> and <cite>Rock Band</cite></dd></div>
-    <div><dt><a href="projects/toybot/">ToyBot</a></dt>
-    <dd>A toy car that drives around by itself</dd></div>
-    <div><dt><a href="projects/ledclock/">LED Clock</a></dt>
-        <dd>A retro LED clock made with recycled parts</dd></div>
+<dl class="inline">
+    <dt><a href="projects/daveybot/">DaveyBot</a></dt>
+    <dd>A computer that plays <cite>Guitar Hero</cite> and <cite>Rock Band</cite></dd>
+    <dt><a href="projects/toybot/">ToyBot</a></dt>
+    <dd>A toy car that drives around by itself</dd>
+    <dt><a href="projects/ledclock/">LED Clock</a></dt>
+        <dd>A retro LED clock made with recycled parts</dd>
 </dl>
 
 <h1><a name="programming"></a>Programming</h1>
-<dl>
-    <div><dt><a href="dev/rp2040-dev-setup.html">RP2040 Windows Development Setup</a></dt>
-    <dd>How to set up a C/C++ development environment for the <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> and other RP2040 dev boards on Windows</dd></div>
-    <div><dt><a href="dev/rp2040-adc-accuracy.html">RP2040 ADC Accuracy</a></dt>
-    <dd>Getting the most out of an analog-to-digital converter</dd></div>
-    <div><dt><a href="https://github.com/Len42/">GitHub</a></dt>
-        <dd>My GitHub <a href="https://github.com/Len42/">repos</a> and <a href="https://gist.github.com/Len42">gists</a></dd></div>
+<dl class="inline">
+    <dt><a href="dev/rp2040-dev-setup.html">RP2040 Windows Development Setup</a></dt>
+    <dd>How to set up a C/C++ development environment for the <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> and other RP2040 dev boards on Windows</dd>
+    <dt><a href="dev/rp2040-adc-accuracy.html">RP2040 ADC Accuracy</a></dt>
+    <dd>Getting the most out of an analog-to-digital converter</dd>
+    <dt><a href="https://github.com/Len42/">GitHub</a></dt>
+        <dd>My GitHub <a href="https://github.com/Len42/">repos</a> and <a href="https://gist.github.com/Len42">gists</a></dd>
 </dl>
 
 <h1><a name="misc"></a>Other Stuff</h1>
-<dl>
-    <div><dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
+<dl class="inline">
+    <dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
     <dd>World-building for an RPG campaign based on
-        <a href="https://www.imdb.com/title/tt0069638/"><cite>The Starlost</cite></a></dd></div>
-    <div><dt><a href="https://www.obsidianportal.com/profile/Len17">Obsidian Portal</a></dt>
-    <dd>Various RPG campaigns I’ve played</dd></div>
-    <div><dt><a href="https://flickr.com/photos/lenp17/">flickr</a></dt>
-    <dd>Photos of things</dd></div>
+        <a href="https://www.imdb.com/title/tt0069638/"><cite>The Starlost</cite></a></dd>
+    <dt><a href="https://www.obsidianportal.com/profile/Len17">Obsidian Portal</a></dt>
+    <dd>Various RPG campaigns I’ve played</dd>
+    <dt><a href="https://flickr.com/photos/lenp17/">flickr</a></dt>
+    <dd>Photos of things</dd>
 </dl>
 </main>
 
