--- a/synth/index.html
+++ b/synth/index.html
@@ -35,69 +35,69 @@ project and source file.</p>
 <p>&mdash; Len</p>
 
 <h1><a name="info"></a>General Info</h1>
-<dl>
-    <div><dt><a href="panels.html">Front Panels</a></dt>
-    <dd>How I make the front panels for my modules</dd></div>
-    <div><dt><a href="part-selection.html">Component Selection</a></dt>
-    <dd>Some notes on which parts to use when building these modules</dd></div>
-    <div><dt><a href="eurorack-bus-cv-gate.html">Eurorack Bus CV and Gate</a></dt>
-    <dd>Spaghetti reduction</dd></div>
-    <div><dt><a href="firmware-programming.html">Firmware Programming</a></dt>
-    <dd>How to program the firmware onto the microcontrollers in some modules</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/discussions">Discussions</a></dt>
-    <dd>Forum for questions, comments, and conversations</dd></div>
+<dl class="inline">
+    <dt><a href="panels.html">Front Panels</a></dt>
+    <dd>How I make the front panels for my modules</dd>
+    <dt><a href="part-selection.html">Component Selection</a></dt>
+    <dd>Some notes on which parts to use when building these modules</dd>
+    <dt><a href="eurorack-bus-cv-gate.html">Eurorack Bus CV and Gate</a></dt>
+    <dd>Spaghetti reduction</dd>
+    <dt><a href="firmware-programming.html">Firmware Programming</a></dt>
+    <dd>How to program the firmware onto the microcontrollers in some modules</dd>
+    <dt><a href="https://github.com/Len42/Synth/discussions">Discussions</a></dt>
+    <dd>Forum for questions, comments, and conversations</dd>
     </dl>
 
 <h1><a name="modules"></a>Modules</h1>
 <a href="../assets/synth-photo.jpg"><img src="../assets/synth-photo.jpg" class="side" alt="Modular synthesizer"></a>
 <p>These are the modules that I have built.</p>
-<dl>
-    <div><dt><a href="dexy">Dexy</a></dt>
-    <dd>DX7-inspired FM synthesis with a Raspberry Pi Pico</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Filter2#readme">Filter2</a></dt>
-    <dd>Dual filter module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Switches#readme">Switches</a></dt>
-    <dd>4-channel muting module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCF-SV#readme">VCF-SV</a></dt>
-    <dd>State-variable filter module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Adder#readme">Adder</a></dt>
-    <dd>Unity-gain mixer / precision adder</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/FX#readme">FX</a></dt>
-    <dd>Digital effects module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Attenuverter#readme">Attenuverter</a></dt>
-    <dd>Dual attenuverter module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCF-4P#readme">VCF-4P</a></dt>
-    <dd>4-pole lowpass filter module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Mixer1#readme">Mixer1</a></dt>
-    <dd>Small mixer module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Mixer2#readme">Mixer2</a></dt>
-    <dd>Dual mixer module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Buff-Mult#readme">Buff-Mult</a></dt>
-    <dd>Buffered multiples</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Bus-Driver#readme">Bus-Driver</a></dt>
-    <dd>Driver module for Eurorack bus CV & gate signals</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCA-4#readme">VCA-4</a></dt>
-    <dd>Quad exponential VCA</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Audiout#readme">Audiout</a></dt>
-    <dd>Audio output module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCO-2131#readme">VCO-2131</a></dt>
-    <dd> Analog VCO based on the SSI2131 chip</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Envelope2#readme">Envelope2</a></dt>
-    <dd>Dual ADSR envelope module, microcontroller-based</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Wavefolder#readme">Wavefolder</a></dt>
-    <dd>Dual analog wavefolder module</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/LFO-DigiVC#readme">LFO-DigiVC</a></dt>
-    <dd>Voltage-controlled LFO, microcontroller-based</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/modules/Noise-SH#readme">Noise-SH</a></dt>
-    <dd>Noise, sample-and-hold, and trigger clock, all in one module</dd></div>
+<dl class="inline">
+    <dt><a href="dexy">Dexy</a></dt>
+    <dd>DX7-inspired FM synthesis with a Raspberry Pi Pico</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Filter2#readme">Filter2</a></dt>
+    <dd>Dual filter module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Switches#readme">Switches</a></dt>
+    <dd>4-channel muting module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCF-SV#readme">VCF-SV</a></dt>
+    <dd>State-variable filter module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Adder#readme">Adder</a></dt>
+    <dd>Unity-gain mixer / precision adder</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/FX#readme">FX</a></dt>
+    <dd>Digital effects module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Attenuverter#readme">Attenuverter</a></dt>
+    <dd>Dual attenuverter module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCF-4P#readme">VCF-4P</a></dt>
+    <dd>4-pole lowpass filter module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Mixer1#readme">Mixer1</a></dt>
+    <dd>Small mixer module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Mixer2#readme">Mixer2</a></dt>
+    <dd>Dual mixer module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Buff-Mult#readme">Buff-Mult</a></dt>
+    <dd>Buffered multiples</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Bus-Driver#readme">Bus-Driver</a></dt>
+    <dd>Driver module for Eurorack bus CV & gate signals</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCA-4#readme">VCA-4</a></dt>
+    <dd>Quad exponential VCA</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Audiout#readme">Audiout</a></dt>
+    <dd>Audio output module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/VCO-2131#readme">VCO-2131</a></dt>
+    <dd> Analog VCO based on the SSI2131 chip</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Envelope2#readme">Envelope2</a></dt>
+    <dd>Dual ADSR envelope module, microcontroller-based</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Wavefolder#readme">Wavefolder</a></dt>
+    <dd>Dual analog wavefolder module</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/LFO-DigiVC#readme">LFO-DigiVC</a></dt>
+    <dd>Voltage-controlled LFO, microcontroller-based</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/modules/Noise-SH#readme">Noise-SH</a></dt>
+    <dd>Noise, sample-and-hold, and trigger clock, all in one module</dd>
 </dl>
 
 <h1><a name="misc"></a>Not Modules</h1>
-<dl>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power-Supply</a></dt>
-    <dd>Eurorack power supply using a laptop charger</dd></div>
-    <div><dt><a href="https://github.com/Len42/Synth/tree/main/misc/cable-hanger#readme">Cable Hanger</a></dt>
-    <dd>Simple desk-mounted patch cable rack</dd></div>
+<dl class="inline">
+    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power-Supply</a></dt>
+    <dd>Eurorack power supply using a laptop charger</dd>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/cable-hanger#readme">Cable Hanger</a></dt>
+    <dd>Simple desk-mounted patch cable rack</dd>
 </dl>
 
 </main>
