--- a/synth/index.html
+++ b/synth/index.html
@@ -94,7 +94,7 @@ project and source file.</p>
 
 <h1><a name="misc"></a>Not Modules</h1>
 <dl>
-    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power-Supply</a></dt>
+    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power Supply</a></dt>
     <dd>Eurorack power supply using a laptop charger</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/misc/cable-hanger#readme">Cable Hanger</a></dt>
     <dd>Simple desk-mounted patch cable rack</dd>
