Use <aside> for sidebar images & stuff

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>I’m Len, and this is my web site.</p>
     
 <h1><a name="projects"></a>Projects</h1>
-<img src="assets/synth-photo.jpg" class="side" alt="Modular synthesizer">
+<aside><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></aside>
 <p>I have published many of my software and hardware projects on <a href="https://github.com/Len42">GitHub</a>.</p>
 
 <h2>Recent</h2>
