--- a/synth/dexy/firmware.html
+++ b/synth/dexy/firmware.html
@@ -26,7 +26,7 @@
 
 <main>
 
-<img src="firmware.png" class="side" alt="source code">
+<aside><img src="firmware.png" alt="source code"></aside>
 <p>The <a href="index.html">Dexy FM voice module</a> is based on an <a href="https://www.raspberrypi.com/documentation/microcontrollers/rp2040.html">RP2040 microcontroller</a>. The firmware is open source and is published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>. GitHub repository is <a href="https://github.com/Len42/Dexy">here</a>.</p>
 
 <h1><a name="building"></a>Building the Firmware</h1>
