--- a/synth/dexy/index.html
+++ b/synth/dexy/index.html
@@ -27,7 +27,7 @@
 
 <main>
 
-<a href="dexy.jpg"><img src="dexy.jpg" class="side" alt="Dexy module"></a>
+<aside><a href="dexy.jpg"><img src="dexy.jpg" alt="Dexy module"></a></aside>
 
 <p>Dexy is a 10HP <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> module that does FM synthesis using a <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a>. It is not a Yamaha DX7 clone, but it uses similar operators and algorithms to create a single FM voice.</p>
 
