--- a/synth/dexy/software.html
+++ b/synth/dexy/software.html
@@ -25,7 +25,7 @@
 
 <main>
 
-<img src="software.jpg" class="side" alt="cropped screenshot">
+<aside><img src="software.jpg" alt="cropped screenshot"></aside>
 <p>DexyPatch is a Windows application for editing patches for the <a href="index.html">Dexy</a> FM voice module. It is open source software and is published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>. GitHub repository is <a href="https://github.com/Len42/Dexy">here</a>.</p>
 
 <h1><a name="features"></a>Features</h1>
