--- a/synth/index.html
+++ b/synth/index.html
@@ -23,7 +23,7 @@
 </header>
 
 <main>
-<a href="synth-photo2.jpg"><img src="synth-photo2.jpg" class="side" alt="Modular synthesizer"></a>
+<aside><a href="synth-photo2.jpg"><img src="synth-photo2.jpg" alt="Modular synthesizer"></a></aside>
 
 <p>My <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> modular synthesizer designs are shared in
 <a href="https://github.com/Len42/Synth/#readme-ov-file">this GitHub repository</a>.</p>
@@ -49,7 +49,7 @@ project and source file.</p>
     </dl>
 
 <h1><a name="modules"></a>Modules</h1>
-<a href="../assets/synth-photo.jpg"><img src="../assets/synth-photo.jpg" class="side" alt="Modular synthesizer"></a>
+<aside><a href="../assets/synth-photo.jpg"><img src="../assets/synth-photo.jpg" alt="Modular synthesizer"></a></aside>
 <p>These are the modules that I have built.</p>
 <dl class="inline">
     <dt><a href="dexy">Dexy</a></dt>
