--- a/synth/part-selection.html
+++ b/synth/part-selection.html
@@ -23,7 +23,7 @@
 </header>
 
 <main>
-<a href="parts.jpg"><img src="parts.jpg" class="side" alt="Transistors!"></a>
+<aside><a href="parts.jpg"><img src="parts.jpg" alt="Transistors!"></a></aside>
 
 <p>Each of these module designs includes a bill of materials (BOM) that lists
 all of the components needed to build the module. I use the BOM to organize my
