--- a/synth/dexy/hardware.html
+++ b/synth/dexy/hardware.html
@@ -28,7 +28,7 @@
 
 <p><a href="index.html">Dexy</a> is a 10HP Eurorack module that does digital FM synthesis.
 Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/Dexy">here</a>.</p>
-<a href="board2.jpg"><img src="board2.jpg" class="side" alt="Dexy PCB"></a>
+<aside><a href="board2.jpg"><img src="board2.jpg" alt="Dexy PCB"></a></aside>
 
 <h1><a name="features"></a>Hardware Features</h1>
 <ul>
@@ -47,7 +47,7 @@ Hardware and software are open source. GitHub repository is <a href="https://git
 
 <p></p>The <a href="https://www.adafruit.com/product/5302">KB2040</a> microcontroller module is similar to a <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> but it’s smaller. The firmware will run on any Pico-compatible board with minor changes. (For example, my prototype used an <a href="https://www.adafruit.com/product/4884">Adafruit Feather RP2040</a> but it turned out to be too big.) Of course, the PCB layout must be changed if a different microcontroller module is used.</p>
 
-<a href="board.jpg"><img src="board.jpg" class="side" alt="Dexy PCB"></a>
+<aside><a href="board.jpg"><img src="board.jpg" alt="Dexy PCB"></a></aside>
 
 <p>The microcontroller board is powered by either the USB connection or the Eurorack +5 V supply, whichever is turned on. If both power supplies are on, a diode prevents them from fighting each other.</p>
 
