--- a/synth/part-selection.html
+++ b/synth/part-selection.html
@@ -61,8 +61,9 @@ unless otherwised noted.</p>
 
 <p>Decoupling caps for ICs are 100 nF ceramic, any make.</p>
 
-<p>Capacitors in the audio signal path are mostly specified as film types,
-but good quality ceramic caps (C0G, NP0) can probably be used in many cases.</p>
+<p>Capacitors in the audio signal path are specified as either film types for
+larger capacitance values, or high-quality ceramic caps (C0G, NP0) for small
+values.</p>
 
 <p>There are a few places where film capacitors with high stability and low
 leakage are required. These are noted on the schematic.</p>
