--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <dd>My GitHub <a href="https://github.com/Len42/">repos</a> and <a href="https://gist.github.com/Len42">gists</a></dd>
 </dl>
 
-<h2>Utilities</h2>
+<h2>Software Utilities</h2>
 <dl>
     <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a></dt>
     <dd>Monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
