--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <aside><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></aside>
 <p>I have published many of my software and hardware projects on <a href="https://github.com/Len42">GitHub</a>.</p>
 
-<h2>Recent</h2>
+<h2>Recent Projects</h2>
 <dl>
     <dt><a href="synth/">Modular Synth</a></dt>
     <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd>
